# simulations

./: LICENSE  README.md
first/: CMakeLists.txt  main.cpp  particle.cpp  particle.hpp  simulation.cpp  simulation.hpp
verlet_particles/: CMakeLists.txt  main.cpp  simulation.hpp
verlet_velocity/: CMakeLists.txt  main.cpp  particle.cpp  particle.hpp  simulation.cpp  simulation.hpp
